ALL TESTS PASS -Various little fixes located via the FindBugs plug-in and Eclipse/Kepler's improved null analysis.